<resources>
    <string name="app_name">Workout</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="place">Place</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="individual">Individual</string>
    <string name="group_activity">Group Activity</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>