<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:padding="7dp"
                        android:text="@string/title"/>
                    <EditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:gravity="start"
                        android:inputType="text|textMultiLine"
                        android:background="@drawable/rect_gray_border"
                        android:padding="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:padding="7dp"
                        android:text="@string/date"/>
                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:background="@drawable/rect_gray_border"
                        android:padding="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:padding="7dp"
                        android:text="@string/place"/>
                    <EditText
                        android:id="@+id/place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:gravity="start"
                        android:inputType="text"
                        android:background="@drawable/rect_gray_border"
                        android:padding="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="7dp"
                        android:layout_marginBottom="7dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:padding="7dp"
                            android:text="@string/start_time"/>
                        <TextView
                            android:id="@+id/start_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:hint="@string/start_time"
                            android:textColor="@color/black"
                            android:background="@drawable/rect_gray_border"
                            android:padding="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="7dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:padding="7dp"
                            android:text="@string/end_time"/>
                        <TextView
                            android:id="@+id/end_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:hint="@string/end_time"
                            android:textColor="@color/black"
                            android:background="@drawable/rect_gray_border"
                            android:padding="10dp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="7dp">
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <RadioButton
                            android:id="@+id/individual"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/individual"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:checked="true"
                            android:layout_marginEnd="10dp"/>
                        <RadioButton
                            android:id="@+id/group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/group_activity"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:layout_marginEnd="10dp"/>
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="7dp">
                    <TextView
                        android:id="@+id/cancel_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/cancel"
                        android:gravity="center"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/round_primary_background"/>
                    <TextView
                        android:id="@+id/add_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/add"
                        android:gravity="center"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/round_primary_background"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
